--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,9 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Project specific ignores
+venv/
+MULTI-TOOL-AGENTIC-AI.egg-info/
+logs/
+.env
